--- a/index.html
+++ b/index.html
@@ -15,33 +15,68 @@
 <body>
 	<div class="grid-container ba-container">
 		<h1 class="title">Image Grid</h1>
-		<div class="grid-row ba-grid">
-			<div class="grid-item ba-width-1-2 grid-item--grey">600x150</div>
-			<div class="grid-item ba-width-1-2 grid-item--green">600x150</div>
-		</div>
-
-		<div class="grid-row ba-grid grid-row--150">
-			<div class="grid-item ba-width-1-2 grid-item--green">600x320</div>
+		<div class="grid-row ba-grid ba-grid-nopad">
 			<div class="grid-item ba-width-1-2">
-				<div class="grid-row ba-grid ">
-					<div class="grid-item ba-width-1-3 grid-item--grey">200x165</div>
-					<div class="grid-item ba-width-1-3 grid-item--green">200x165</div>
-					<div class="grid-item ba-width-1-3 grid-item--grey">200x165</div>
-				</div>
-				<div class="grid-row ba-grid ">
-					<div class="grid-item ba-width-1-2 grid-item--grey">300x150</div>
-					<div class="grid-item ba-width-1-2 grid-item--green">300x150</div>
-				</div>
+				<img class="img-responsive" src="https://via.placeholder.com/600x150/AFDFBF/5E6364 ?Text=600x150" alt="">
 			</div>
-
-			<div class="grid-row ba-grid ">
-				<div class="grid-item ba-width-1-6 grid-item--grey">200x145</div>
-				<div class="grid-item ba-width-1-2 grid-item--green">600x135</div>
-				<div class="grid-item ba-width-1-3 grid-item--grey">400x135</div>				
+			<div class="grid-item ba-width-1-2">
+				<img class="img-responsive" src="https://via.placeholder.com/600x150/68C5B8/5E6364 ?Text=600x150" alt="">
+			</div>
+		</div>
+		
+		<div class="grid-row ba-grid ba-grid-nopad">
+			<div class="grid-item ba-width-1-2">
+				<img class="img-responsive" src="https://via.placeholder.com/600x320/FA688A/FFFFFF ?Text=600x320" alt="">
+			</div>
+			<div class="grid-item ba-width-1-2">
+				<div class="grid-row ba-grid ba-grid-nopad">
+					<div class="grid-item ba-width-1-3">
+						<img class="img-responsive" src="https://via.placeholder.com/200x165/8A95EF/FFFFFF ?Text=200x165" alt="">
+					</div>
+					<div class="grid-item ba-width-1-3">
+						<img class="img-responsive" src="https://via.placeholder.com/200x165/8A95EF/FFFFFF ?Text=200x165" alt="">
+					</div>
+					<div class="grid-item ba-width-1-3">
+						<img class="img-responsive" src="https://via.placeholder.com/200x165/8A95EF/FFFFFF ?Text=200x165" alt="">
+					</div>
+				</div>
+				<div class="grid-row ba-grid ba-grid-nopad">
+					<div class="grid-item ba-width-1-2">
+						<img class="img-responsive" src="https://via.placeholder.com/300x150/FFC569/666764 ?Text=300x150" alt="">
+					</div>
+					<div class="grid-item ba-width-1-2">
+						<img class="img-responsive" src="https://via.placeholder.com/300x150/FFC569/666764 ?Text=300x150" alt="">
+					</div>
+				</div>
 			</div>
 		</div>
 
+		<div class="grid-row ba-grid ba-grid-nopad">
+			<div class="grid-item ba-width-1-3">
+				<img class="img-responsive" src="https://via.placeholder.com/400x185/588CC7/FFFFFF ?Text=400x185" alt="">
+			</div>
+			<div class="grid-item ba-width-1-3">
+				<img class="img-responsive" src="https://via.placeholder.com/400x185/588CC7/FFFFFF ?Text=400x185" alt="">
+			</div>
+			<div class="grid-item ba-width-1-6">
+				<img class="img-responsive" src="https://via.placeholder.com/200x195/588CC7/FFFFFF ?Text=200x195" alt="">
+			</div>
+			<div class="grid-item ba-width-1-6">
+				<img class="img-responsive" src="https://via.placeholder.com/200x195/588CC7/FFFFFF ?Text=200x195" alt="">
+			</div>					
+		</div>
 
+		<div class="grid-row ba-grid ba-grid-nopad">
+			<div class="grid-item ba-width-1-6">
+				<img class="img-responsive" src="https://via.placeholder.com/200x145/6652AD/FFFFFF ?Text=200x145" alt="">
+			</div>
+			<div class="grid-item ba-width-1-2">
+				<img class="img-responsive" src="https://via.placeholder.com/600x135/6652AD/FFFFFF ?Text=600x135" alt="">
+			</div>
+			<div class="grid-item ba-width-1-3">
+				<img class="img-responsive" src="https://via.placeholder.com/400x135/6652AD/FFFFFF ?Text=400x135" alt="">
+			</div>				
+		</div>
 	</div> <!-- /ba-container -->
 </body>
 </html>
