--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="grid-item ba-width-1-2">
 				<img class="img-responsive" src="https://via.placeholder.com/600x320/FA688A/FFFFFF ?Text=600x320" alt="">
 			</div>
-			<div class="grid-item ba-width-1-2">
+			<div class="ba-grid ba-grid-nopad ba-width-1-2">
 				<div class="grid-row ba-grid ba-grid-nopad">
 					<div class="grid-item ba-width-1-3">
 						<img class="img-responsive" src="https://via.placeholder.com/200x165/8A95EF/FFFFFF ?Text=200x165" alt="">
