--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="grid-container ba-container">
 		<h1>Image Grid</h1>
 	<div class="ba-container">
-		<div class="grid-row ba-grid ba-grid-nopad">
+		<div class="ba-grid">
 			<div class="ba-width-1-2">
 				<img class="img" src="https://via.placeholder.com/600x150/AFDFBF/5E6364 ?Text=600x150" alt="">
 			</div>
@@ -25,12 +25,12 @@
 			</div>
 		</div>
 		
-		<div class="grid-row ba-grid ba-grid-nopad">
+		<div class="ba-grid">
 			<div class="ba-width-1-2">
 				<img class="img" src="https://via.placeholder.com/600x320/FA688A/FFFFFF ?Text=600x320" alt="">
 			</div>
 			<div class="ba-width-1-2">
-				<div class="grid-row ba-grid ba-grid-nopad">
+				<div class="ba-grid">
 					<div class="ba-width-1-3">
 						<img class="img" src="https://via.placeholder.com/200x165/8A95EF/FFFFFF ?Text=200x165" alt="">
 					</div>
@@ -41,7 +41,7 @@
 						<img class="img" src="https://via.placeholder.com/200x165/8A95EF/FFFFFF ?Text=200x165" alt="">
 					</div>
 				</div>
-				<div class="grid-row ba-grid ba-grid-nopad">
+				<div class="ba-grid">
 					<div class="ba-width-1-2">
 						<img class="img" src="https://via.placeholder.com/300x150/FFC569/666764 ?Text=300x150" alt="">
 					</div>
@@ -52,37 +52,31 @@
 			</div>
 		</div>
 
-		<div class="grid-row ba-grid ba-grid-nopad">
-			<div class="ba-width-2-3">
-				<div class="grid-row ba-grid ba-grid-nopad">
-					<div class="ba-width-1-2">
-						<img class="img-responsive" src="https://via.placeholder.com/400x185/588CC7/FFFFFF ?Text=400x185" alt="">
-					</div>
-					<div class="ba-width-1-2">
-						<img class="img-responsive" src="https://via.placeholder.com/400x185/588CC7/FFFFFF ?Text=400x185" alt="">
-					</div>
-				</div>
-				<div class="grid-row ba-grid ba-grid-nopad">
-					<div class="ba-width-1-4">
-						<img class="img" src="https://via.placeholder.com/200x145/6652AD/FFFFFF ?Text=200x145" alt="">
-					</div>
-					<div class="ba-width-3-4">
-						<img class="img" src="https://via.placeholder.com/600x135/6652AD/FFFFFF ?Text=600x135" alt="">
-					</div>
-				</div>
+		<div class="ba-grid">
+			<div class="ba-width-1-3">
+				<img class="img-responsive" src="https://via.placeholder.com/400x185/588CC7/FFFFFF ?Text=400x185" alt="">
 			</div>
 			<div class="ba-width-1-3">
-				<div class="grid-row ba-grid ba-grid-nopad">
-					<div class="ba-width-1-2">
-						<img class="img-responsive" src="https://via.placeholder.com/200x195/588CC7/FFFFFF ?Text=200x195" alt="">
-					</div>
-					<div class="ba-width-1-2">
-						<img class="img-responsive" src="https://via.placeholder.com/200x195/588CC7/FFFFFF ?Text=200x195" alt="">
-					</div>
-				</div>
-				<div class="grid-row ba-grid ba-grid-nopad">
-					<img class="img" src="https://via.placeholder.com/400x135/6652AD/FFFFFF ?Text=400x135" alt="">
-				</div>
+				<img class="img-responsive" src="https://via.placeholder.com/400x185/588CC7/FFFFFF ?Text=400x185" alt="">
+			</div>
+			<div class="ba-width-1-6">
+				<img class="img-responsive" src="https://via.placeholder.com/200x195/588CC7/FFFFFF ?Text=200x195" alt="">
+			</div>
+			<div class="ba-width-1-6">
+				<img class="img-responsive" src="https://via.placeholder.com/200x195/588CC7/FFFFFF ?Text=200x195" alt="">
+			</div>
+		</div>
+		
+		<div class="ba-grid">
+			<div class="ba-width-1-6">
+				<img class="img" src="https://via.placeholder.com/200x145/6652AD/FFFFFF ?Text=200x145" alt="">
+			</div>
+			<div class="ba-width-1-2">
+				<img class="img" src="https://via.placeholder.com/600x135/6652AD/FFFFFF ?Text=600x135" alt="">
+			</div>
+			<div class="ba-width-1-3">
+				<img class="img" src="https://via.placeholder.com/400x135/6652AD/FFFFFF ?Text=400x135" alt="">
+			</div>
 			</div>
 		</div>
 	</div> <!-- /ba-container -->
